syntax = "proto3";

package joboffer;

import "google/protobuf/empty.proto";

option java_package = "proto.joboffer";
option java_multiple_files = true;

message JobOfferCreationReturnValue{
  string retVal = 1;
}

message JobOfferCreationParams{
  string position = 1;
  string jobDescription = 2;
  string dailyActivities = 3;
  string candidateRequirements = 4;
  string companyName = 5;
}

message CandidateRequirements{
  repeated string requirement = 1;
}

message CompanyOwnerEmail{
  string email = 1;
}

message CompanyNamesForEmail{
  string companyNames = 1;
}

service JobOfferService {

    rpc createJobOffer(JobOfferCreationParams) returns (JobOfferCreationReturnValue) {};
    rpc getCompanyNamesForEmail(CompanyOwnerEmail) returns (CompanyNamesForEmail) {};

}